# SmartGym-Monitor

./: .env  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  commitlint.config.js  docker-compose.yml  package-lock.json  package.json  prometheus.yml  release.config.js  renovate.json
.github/workflows/: DeployReportSite.yml  build-and-test.yml  ci-e2e.yml  deploy-report-site.yml  release.yml  validate-commits.yml
.husky/: pre-commit  pre-push
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/report/: Conclusion.md  Deployment.md  Design.md  DevOps.md  Implementation.md  Introduction.md  Requirements.md  Technologies.md  WorkPlan.md
grafana/dashboards/: smartgym-overview.json
src/: .env  docker-compose.yml
src/frontend/: .gitignore  Dockerfile  README.md  app.py  config.py  pyproject.toml
src/frontend/smartgym_flask/: app.py  config.py  extensions.py
src/frontend/smartgym_flask/routes/: __init__.py  api.py  auth.py  dashboard.py
src/frontend/smartgym_flask/services/: __init__.py  analytics_service.py  area_service.py  machine_service.py  status_service.py  tracking_service.py  user_service.py
src/frontend/smartgym_flask/static/css/: style.css
src/frontend/smartgym_flask/static/js/: dashboard_statuses.js  history.js  live_monitor.js  theme.js
src/frontend/smartgym_flask/templates/: base.html  base_auth.html  dashboard.html  history.html  live_monitor.html  login.html
src/frontend/templates/: base.html  dashboard.html
src/frontend/tests/: test_api.py  test_auth.py
utils/: README.md
(+256 files in other folders)
