[tool.poetry]
name = "smartgym-frontend"
version = "0.1.0"
description = "SmartGym Monitor Frontend - Software Process Engineering project"
authors = ["Davide Di Marco <davide.dimarco5@studio.unibo.it>", "Pier Costante Babini <piercostante.babini@studio.unibo.it>"]
readme = "README.md"
packages = [{ include = "smartgym_flask" }]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
requests = "^2.32.3"
gunicorn = "^23.0.0"
tzdata = "^2026.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
ruff = "^0.15.0"

[tool.ruff]
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"